--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,22 +1,24 @@
 <% if @photo.errors.present?%>
   <ul>
       <% @photo.errors.each do |error, message| %>
-      <li> <%= "#{error.capitalize} #{message}" %></li>
+        <li> <%= "#{error.capitalize} #{message}" %></li>
       <% end %>
   </ul>
 <% end %>
 
+<div class="form container">
 <%= form_for @photo do |f| %>
-  <%= f.label :title,  "Title" %>
-  <%= f.text_field :title %>
-
+<div class="form-group">
+  <%= f.label :title, "Title" %>
+  <%= f.text_field :title,class:"form-control" %>
+<div class="form-group">
   <%= f.label :date, "Date" %>
-  <%= f.text_field :date %>
-
+  <%= f.text_field :date,class:"form-control" %>
+<div class="form-group">
   <%= f.label :description, "Description" %>
-  <%= f.text_area :description %>
-
-  <%= f.label :file_location, "File location" %>
+  <%= f.text_area :description,class:"form-control" %>
+<div class="form-group">
+  <%= f.label :file_location, "File Location" %>
   <%= f.file_field :file_location %>
 
   <%= f.submit %>
