--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,3 +1,4 @@
+<div class="form container">
 <table class="table table-striped table-condensed">
   <% @photos.each do |photo| %>
   <tr>
@@ -10,3 +11,4 @@
 </table>
 
 <%= link_to 'New Photo', new_photo_path %>
+</div>
